--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,24 @@
-<h1>Index</h1>
-<div class="card">
-      <ul><% @lists.each do |list| %>
-        <li><%= link_to "#{list.name}", list_path(list.id) %></li>
-          <% end %>
-      </ul>
-</div>
+<%= render "navbar" %>
+<%= render "banner" %>
 
-<%= render "form" %>
+<div class="container">
+  <h1>Lists of lists</h1>
+  <div class="cards mb-5">
+    <% @lists.each do |list| %>
+      <% if list.movies.any? %>
+        <div class="card-category" style="background-image: url('<%= list.movies.sample.poster_url %>')">
+        <%= link_to list_path(list.id) do %>
+        <div class="card-title-bottom"><h2><%= list.name %></h2></div>
+        <% end %>
+      </div>
+      <% else %>
+        <div class="card-category">
+          <%= link_to list_path(list.id) do %>
+          <div class="card-title-bottom"><h2><%= list.name %></h2></div>
+          <% end %>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+  <%= render "form" %>
+</div>
