--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,15 @@
-<%= render "navbar" %>
 <%= render "banner" %>
 
 <div class="container">
   <h1>Lists of lists</h1>
   <div class="cards mb-5">
     <% @lists.each do |list| %>
-      <% if list.movies.any? %>
+      <% if list.photo.present? %>
+          <div class="card-category" style="background-image: url('<%= cl_image_path list.photo.key %>')">
+          <%= link_to list_path(list.id) do %>
+          <div class="card-title-bottom"><h2><%= list.name %></h2></div>
+          <% end %>
+      <% elsif list.movies.any? %>
         <div class="card-category" style="background-image: url('<%= list.movies.sample.poster_url %>')">
         <%= link_to list_path(list.id) do %>
         <div class="card-title-bottom"><h2><%= list.name %></h2></div>
