--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -6,5 +6,5 @@
     <%= f.submit class: "btn btn-dark mg-2" %>
 <% end %>
 <br>
-<%= link_to lists_path do %> <div class="btn btn-dark mg-2"> Go back </div> <% end %>
+<%= link_to root do %> <div class="btn btn-dark mg-2"> Go back </div> <% end %>
 </div>
