--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,6 +8,7 @@
           <div class="card-category" style="background-image: url('<%= cl_image_path list.photo.key %>')">
           <%= link_to list_path(list.id) do %>
           <div class="card-title-bottom"><h2><%= list.name %></h2></div>
+          </div>
           <% end %>
       <% elsif list.movies.any? %>
         <div class="card-category" style="background-image: url('<%= list.movies.sample.poster_url %>')">
