--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,21 +1,23 @@
-<%= render "banner" %>
-
-<div class="container">
-<h1>Bookmark page for <%= @list.name %></h1>
-  <div class="cards">
-    <% @list.bookmarks.each do |bookmark| %>
-      <div class="card">
-      <%= image_tag bookmark.movie.poster_url %>'
-        <div class="card-body bg-dark text-white">
-          <h2><%= bookmark.movie.title %> </h2>
-          <%= bookmark.comment %>
-          <%= link_to "Delete bookmark?", bookmark_path(bookmark), method: :delete, data: { confirm: "Remove #{bookmark.movie.title}?" }%> </li>
-        </div>
+<div class="d-flex">
+  <%= render "banner" %>
+  <div class="container">
+    <br>
+    <br>
+    <h1>Bookmark page for <%= @list.name %></h1>
+      <div class="cards">
+        <% @list.bookmarks.each do |bookmark| %>
+          <div class="card">
+          <%= image_tag bookmark.movie.poster_url %>'
+            <div class="card-body bg-dark text-white">
+              <h2><%= bookmark.movie.title %> </h2>
+              <%= bookmark.comment %>
+              <%= link_to "<i class='far fa-trash-alt'></i>".html_safe, bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure,bro?" }%> </li>
+            </div>
+          </div>
+          <% end %>
       </div>
-      <% end %>
-  </div>
+      </div>
     <%= render "/bookmarks/form" %>
-  </div>
 </div>
 
 
