--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -4,6 +4,10 @@
   padding: 150px 0;
   background-repeat: no-repeat;
   margin-bottom: 5px;
+  min-width: 50%;
+  height: 100vh;
+  position: sticky;
+  top: 0;
 }
 
 
