--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -1,6 +1,5 @@
 .card-trip {
   overflow: hidden;
-  background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
@@ -29,6 +28,7 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  color: #ecf0f1;
 }
 
 .card-trip-infos .card-trip-user {
