--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -1,6 +1,7 @@
 .card-trip {
   overflow: hidden;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-top: 5px;
 }
 
 .card-trip > img {
@@ -24,9 +25,6 @@
 
 .card-trip .card-trip-infos {
   padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   position: relative;
   color: #ecf0f1;
 }
