--- a/app/views/lists/_bookmark_card.html.erb
+++ b/app/views/lists/_bookmark_card.html.erb
@@ -3,5 +3,6 @@
   <div class="card-trip-infos">
     <h2><%= bookmark.movie.title %> </h2>
     <%= bookmark.comment %>
-    <%= link_to "<i class='far fa-trash-alt'></i>".html_safe, bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure?" }%> </li>
+    <%= link_to "<i class='far fa-trash-alt'></i>".html_safe, bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to remove this bookmark?" }%> </li>
+</div>
 </div>
