--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,7 +7,7 @@
       <% end %>
     </div>
   </div>
-  <div class="row">
-    <%= render "list_form" %>
-  </div>
+</div>
+<div class="row justify-content-center">
+  <button class="golden-btn" style="font-size:1.3em;" id="list-button">Create new list</button>
 </div>
